added connection module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
     <fa-icon [icon]="['fas', 'database']"></fa-icon> 
     Universal Data Tools
   </div>  
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
