--- a/src/app/table/create-table/create-table.component.html
+++ b/src/app/table/create-table/create-table.component.html
@@ -1,10 +1,14 @@
 <app-division title='Create Table'>
+    <div>Table</div>
+    <mat-form-field appearance="fill">
+        <mat-label>Name</mat-label>
+        <input matInput />
+    </mat-form-field>    
     <div>Primary Key</div>
     <mat-form-field appearance="fill">
         <mat-label>Name</mat-label>
         <input matInput />
     </mat-form-field>
-    
     <mat-form-field appearance="fill">
     <mat-label>Type</mat-label>    
     <mat-select>
