--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,7 @@
-@import "../assets/theme.scss";
+@import './shared/style/color/color';
 
 .title {
-    background-color: $titleColor;
-    padding: $titlePadding;
-    box-shadow: $bottomShadow;
-    font-size: 24px;
+    background-color: $appHeaderColor;
+    padding: 15px;;
+    font-size: 1.5rem;
 }
