--- a/src/app/connection/connection.component.scss
+++ b/src/app/connection/connection.component.scss
@@ -1,34 +1,12 @@
-@import "../../assets/theme.scss";
 
-.sub-heading {
-    background-color: $titleColor;
-    padding: $subTitlePadding;
-    font-size: $subTitleFontSize;
+:host {
+    font-size: 1rem;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 30px;
-}
-
-.sub-container {
-    display: flex;
-    flex-direction: column;
-    border: $baseBorder;
-    border-radius: $baseBorderRadius;
-    padding: 10px;
-    margin-bottom: 15px;
+.group-width {
     max-width: 400px;
-    flex: 0 0 auto;
 }
 
-.sub-container-heading {
-    font-weight: $subContainerHeadingFontWeight;
-    color: $subContainerHeadingFontColor;
-    margin-bottom: 5px;
-}
 
 .button-bar {
     display: flex;
