add relational database page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,14 @@
       <fa-icon [icon]="['fas', 'database']"></fa-icon>
       Universal Data Tools
     </div>
-    <button mat-button [matMenuTriggerFor]="connectionMenu">
-      <fa-icon [icon]="['fas', 'plug']"></fa-icon>&nbsp;{{ connection }}
-    </button>
-    <mat-menu #connectionMenu="matMenu">
-      <button mat-menu-item (click)="disconnect()">Close Connection</button>
-    </mat-menu>
+    <ng-container *ngIf="connection.length > 0">
+      <button mat-button [matMenuTriggerFor]="connectionMenu">
+        <fa-icon [icon]="['fas', 'plug']"></fa-icon>&nbsp;{{ connection }}
+      </button>
+      <mat-menu #connectionMenu="matMenu">
+        <button mat-menu-item (click)="disconnect()">Close Connection</button>
+      </mat-menu>
+    </ng-container>
   </div>
   <router-outlet></router-outlet>
 </div>
