--- a/src/app/connection/connection.component.scss
+++ b/src/app/connection/connection.component.scss
@@ -13,3 +13,9 @@
     flex-direction: row;
     justify-content: flex-end;
 }
+
+.error {
+    color: red;
+    margin: 5px;
+    margin-bottom: 10px;
+}
