--- a/src/app/shared/page/page.component.scss
+++ b/src/app/shared/page/page.component.scss
@@ -14,3 +14,11 @@
     justify-content: space-around;
     padding: 30px;
 }
+
+.page-title {
+  margin-right: 15px;
+}
+
+button {
+  padding-top: 4px;
+}
