--- a/src/app/shared/style/color/_color.scss
+++ b/src/app/shared/style/color/_color.scss
@@ -2,3 +2,5 @@ $appHeaderColor: #F0CB98;
 $pageHeaderColor: darken($appHeaderColor, 10%);
 $borderColor: darken(#7474A8, 10%);
 $groupHeaderColor: darken($borderColor, 15%);
+$highlightColor: lighten(#7474A8, 30%);
+$labelColor: darken($borderColor, 15%);
