add delete container

--- a/src/app/docker/container-create/container-create.component.html
+++ b/src/app/docker/container-create/container-create.component.html
@@ -36,7 +36,7 @@
       </form>
       <div class="button-bar">
         <button mat-button color="primary" (click)="onClickCreateContainer()">Create</button>
-        <button mat-button color="primary">Cancel</button>
+        <button mat-button color="primary" (click)="onClickCancel()">Cancel</button>
       </div>
     </app-group>
   </div>
