--- a/src/app/shared/group/group.component.html
+++ b/src/app/shared/group/group.component.html
@@ -1,4 +1,4 @@
-<div class="group">
+<div class="group" [ngClass]="{'full-height': fullHeight}">
     <div class="group-header">{{ title }}</div>
     <ng-content></ng-content>
 </div>
