--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,23 @@
 @import './shared/style/color/color';
 
+.application {
+  height: 100%;
+  width: 100%;
+}
+
 .title {
     background-color: $appHeaderColor;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 15px;;
+    padding: 15px;
     font-size: 1.5rem;
-}
-
-.app-menu {
-  margin-top: 30px;
+    height: 30px;
 }
 
 .button-bar {
   display: flex;
   flex-direction: row;
 }
+
+
