--- a/src/app/shared/page/page.component.scss
+++ b/src/app/shared/page/page.component.scss
@@ -9,13 +9,19 @@
 }
 
 .page-contents {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 30px;
+    position: absolute;
+    bottom: 60px;
+    top: 150px;
+    left: 30px;
+    right: 30px;
+    box-sizing: border-box;
+    display: block;
+
 }
 
 .page-title {
+  display: block;
+  height: 20px;
   margin-right: 15px;
 }
 
