--- a/src/app/database/table/database-table.component.scss
+++ b/src/app/database/table/database-table.component.scss
@@ -23,36 +23,51 @@
 .name-cell {
   min-width: 150px;
   font-weight: bold;
+  padding-right: 10px;
 }
 
 .nullable-cell {
   width: 50px;
+  padding-right: 10px;
+}
+
+.primary-key-cell {
+  width: 50px;
+  padding-right: 10px;
 }
 
 .default-cell {
   min-width: 75px;
+  padding-right: 10px;
 }
 
 .data-type-cell {
   min-width: 75px;
+  padding-right: 10px;
 }
 
 .max-length-cell {
   min-width: 75px;
+  padding-right: 10px;
 }
 
 .numeric-precision-cell {
   min-width: 75px;
+  padding-right: 10px;
 }
 
 .numeric-scale-cell {
   min-width: 75px;
+  padding-right: 10px;
 }
 
 .updatable-cell {
   min-width: 50px;
+  padding-right: 10px;
 }
 
 .data-cell {
   padding-right: 10px;
 }
+
+
