--- a/src/app/database/database-page/database-page.component.scss
+++ b/src/app/database/database-page/database-page.component.scss
@@ -6,9 +6,10 @@
 }
 
 .database-table {
-  margin-left: 30px;
+  position: absolute;
+  left: 280px;
+  right: 20px;
   height: 100%;
-  width: 100%;
 }
 
 .database-navigation {
