--- a/src/app/database/create-table/database-create-table.component.html
+++ b/src/app/database/create-table/database-create-table.component.html
@@ -38,9 +38,9 @@
           </td>
           <td>
             <select formControlName="dataType">
-              <option>int</option>
-              <option>serial</option>
-              <option>varchar</option>
+              <option value="int">int</option>
+              <option value="serial">serial</option>
+              <option value="varchar">varchar</option>
             </select>
           </td>
           <td>
