--- a/src/app/docker/container-create/container-create.component.scss
+++ b/src/app/docker/container-create/container-create.component.scss
@@ -33,6 +33,10 @@
   @include button-bar;
 }
 
+.select-block {
+  margin-bottom: 15px;
+}
+
 .map-field {
   margin-right: 10px;
 }
@@ -41,6 +45,15 @@ label {
   font-size: 0.9rem;
   color: $labelColor;
   padding-bottom: 2px;
+}
+
+.select-label {
+  display: block;
+  padding-left: 3px;
+  padding-bottom: 3px;
+  color: #7474A8;
+  font-size: 0.85em;
+  font-weight: 400;
 }
 
 .field-volume {
