--- a/src/app/docker/search-image/search-image.component.scss
+++ b/src/app/docker/search-image/search-image.component.scss
@@ -15,6 +15,19 @@
   }
 }
 
+.page-container {
+  position: absolute;
+  top: 30px;
+  bottom: 30px;
+  width: 100%;
+}
+
+.page-column {
+  width: 700px;
+  height: 100%;
+  margin: auto;
+}
+
 .form-line {
   display: flex;
   flex-direction: row;
