--- a/src/app/docker/container-create/container-create.component.scss
+++ b/src/app/docker/container-create/container-create.component.scss
@@ -34,7 +34,7 @@
 }
 
 .select-block {
-  margin-bottom: 15px;
+  @include select-block;
 }
 
 .map-field {
@@ -45,15 +45,6 @@ label {
   font-size: 0.9rem;
   color: $labelColor;
   padding-bottom: 2px;
-}
-
-.select-label {
-  display: block;
-  padding-left: 3px;
-  padding-bottom: 3px;
-  color: #7474A8;
-  font-size: 0.85em;
-  font-weight: 400;
 }
 
 .field-volume {
