--- a/src/app/docker/docker-page/docker-page.component.html
+++ b/src/app/docker/docker-page/docker-page.component.html
@@ -1,3 +1,3 @@
-<app-page title='Docker' [menus]="menus">
+<lib-udtc-page title='Docker' [menus]="menus" [errorMessage]="errorMessage">
   <router-outlet></router-outlet>
-</app-page>
+</lib-udtc-page>
