--- a/src/app/docker/container-create/container-create.component.html
+++ b/src/app/docker/container-create/container-create.component.html
@@ -5,7 +5,7 @@
         <div class="select-block">
           <label>Image</label>
           <select formControlName="image">
-            <option *ngFor="let image of images" [value]="image.tags">{{ image.tags }}</option>
+            <option *ngFor="let image of images" [ngValue]="image.tags">{{ image.tags }}</option>
           </select>
           <!-- <button mat-icon-button color='primary' (click)="onSearchImageDisplay()">
             <fa-icon [icon]="['fas', 'search']"></fa-icon>
